# antibody-registry

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  antibody_registry_login.py  download.py  fnox.toml  hk.pkl  logging_config.json  logging_config.py  mise.toml  prek.toml  pydantic_base_model.py  pyproject.toml  secret.py
traffic_capture/: antibody_registry.mitmdump.xz
