# vim: set ft=toml :


[project]
name = 'antibody-registry'


[tool.pixi.workspace]
channels = ['conda-forge']
platforms = [
  'linux-64',
  'linux-aarch64',
  'osx-64',
  'osx-arm64',
]

[tool.pixi.dependencies]
python = { version = '>=3.14.0,<3.15' }

[tool.pixi.pypi-dependencies]
httpx = { version = '>=0.28.1', extras = ['http2'] }
lxml = { version = '>=6.0.2' }
orjson = { version = '>=3.11.3' }
pydantic = { version = '>=2.12.3' }
rich = { version = '>=14.2.0' }  # weak dependency of structlog
stamina = { version = '>=25.1.0' }
structlog = { version = '>=25.4.0' }
typer = { version = '>=0.19.2' }

[tool.pixi.environments]
default = { solve-group = 'default' }
lint = { features = ['lint'], solve-group = 'default' }

[tool.pixi.feature.lint.pypi-dependencies]
lxml-stubs = { version = '>=0.5.1' }
mypy = { version = '>=1.18.1', extras = ['faster-cache'] }
pre-commit = { version = '>=4.3.0' }
pre-commit-hooks = { version = '>=6.0.0' }
ruff = { version = '>=0.14.1' }

[tool.pixi.feature.lint.tasks]
lint = { depends-on = ['pre-commit-run'] }
pre-commit-run = { cmd = ['pre-commit', 'run', '--all-files'] }
pre-commit-install = { depends-on = [
  '_pre-commit-install-commit-msg',
  '_pre-commit-install-post-checkout',
  '_pre-commit-install-post-commit',
  '_pre-commit-install-post-merge',
  '_pre-commit-install-post-rewrite',
  '_pre-commit-install-pre-commit',
  '_pre-commit-install-pre-merge-commit',
  '_pre-commit-install-pre-push',
  '_pre-commit-install-pre-rebase',
  '_pre-commit-install-prepare-commit-msg',
] }
_pre-commit-install-commit-msg = { cmd = [
  'pre-commit', 'install', '-f', '-t', 'commit-msg',
] }
_pre-commit-install-post-checkout = { cmd = [
  'pre-commit', 'install', '-f', '-t', 'post-checkout',
] }
_pre-commit-install-post-commit = { cmd = [
  'pre-commit', 'install', '-f', '-t', 'post-commit',
] }
_pre-commit-install-post-merge = { cmd = [
  'pre-commit', 'install', '-f', '-t', 'post-merge',
] }
_pre-commit-install-post-rewrite = { cmd = [
  'pre-commit', 'install', '-f', '-t', 'post-rewrite',
] }
_pre-commit-install-pre-commit = { cmd = [
  'pre-commit', 'install', '-f', '-t', 'pre-commit',
] }
_pre-commit-install-pre-merge-commit = { cmd = [
  'pre-commit', 'install', '-f', '-t', 'pre-merge-commit',
] }
_pre-commit-install-pre-push = { cmd = [
  'pre-commit', 'install', '-f', '-t', 'pre-push',
] }
_pre-commit-install-pre-rebase = { cmd = [
  'pre-commit', 'install', '-f', '-t', 'pre-rebase',
] }
_pre-commit-install-prepare-commit-msg = { cmd = [
  'pre-commit', 'install', '-f', '-t', 'prepare-commit-msg',
] }


[tool.mypy]
allow_redefinition_new = true
fixed_format_cache = true
local_partial_types = true
plugins = [
  'pydantic.mypy',
]
python_version = '3.14'
strict = true
strict_bytes = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[tool.ruff]
line-length = 100
target-version = 'py314'

[tool.ruff.lint]
explicit-preview-rules = true
fixable = ['ALL']
future-annotations = true
ignore = [
  'ANN',      # mypy handles our type annotations
  'C901',
  'COM812',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'COM819',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'CPY',      # not publishing publicly
  'D',        # we prefer our own docstring style
  'E111',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'E114',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'E117',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'ERA',      # do not remove commented-out code
  'ISC001',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'ISC002',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'PLR0912',
  'PLR0915',
  'Q000',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q001',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q002',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q003',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'TCH',      # TYPE_CHECKING blocks break autodocs
  'W191',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
]
preview = true
select = ['ALL']
unfixable = []

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = []
known-local-folder = [
  'logging_config',
  'pydantic_base_model',
  'secret',
]
known-third-party = [
  'httpx',
  'lxml',
  'orjson',
  'pydantic',
  'stamina',
  'structlog',
  'typer',
]
