# vim: set ft=toml :


[project]
name = 'antibody-registry'


[tool.pixi.workspace]
channels = ['conda-forge']
platforms = [
  'linux-64',
  'linux-aarch64',
  'osx-arm64',
]

[tool.pixi.dependencies]
python = { version = '>=3.14,<3.15' }

[tool.pixi.pypi-dependencies]
httpx = { version = '*', extras = ['http2'] }
lxml = { version = '*' }
orjson = { version = '*' }
pydantic = { version = '*' }
rich = { version = '*' }  # weak dependency of structlog
stamina = { version = '*' }
structlog = { version = '*' }
typer = { version = '*' }

[tool.pixi.environments]
default = { solve-group = 'default' }
lint = { features = ['lint'], solve-group = 'default' }

[tool.pixi.feature.lint.pypi-dependencies]
lxml-stubs = { version = '*' }
mypy = { version = '*', extras = ['faster-cache'] }
ruff = { version = '*' }


[tool.mypy]
allow_redefinition_new = true
enable_incomplete_feature = [
  'PreciseTupleTypes',
  'TypeForm',
]
fixed_format_cache = true
install_types = false
local_partial_types = true
plugins = [
  'pydantic.mypy',
]
python_version = '3.14'
strict = true
strict_bytes = true
warn_unreachable = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[tool.ruff]
line-length = 100
target-version = 'py314'

[tool.ruff.format]
preview = true

[tool.ruff.lint]
future-annotations = true
ignore = [
  'ANN',      # mypy handles our type annotations
  'C901',
  'COM812',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'COM819',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'CPY',      # not publishing publicly
  'D1',       # docstrings are optional
  'E111',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'E114',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'E117',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'ERA',      # do not remove commented-out code
  'ISC001',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'ISC002',   # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'PLR0912',
  'PLR0915',
  'Q000',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q001',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q002',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'Q003',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  'W191',     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
]
select = ['ALL']

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = []
known-local-folder = [
  'logging_config',
  'pydantic_base_model',
  'secret',
]
known-third-party = [
  'httpx',
  'lxml',
  'orjson',
  'pydantic',
  'stamina',
  'structlog',
  'typer',
]

[tool.ruff.lint.pydocstyle]
convention = 'pep257'
